--- a/src/styles/hero-slider.css
+++ b/src/styles/hero-slider.css
@@ -5,7 +5,7 @@
 
 .slider__item-01 {
   background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
-    url("../assets/all-images/slider-img/slider-1.jpg");
+    url("https://asacar.uz/uploads/car_color/KK/KK/KE/1632743563.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@
 
 .slider__item-02 {
   background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
-    url("../assets/all-images/slider-img/slider-2.jpg");
+    url("https://chevrolet.uz/assets/images/lacetti/colors/1.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,7 +21,7 @@
 
 .slider__item-03 {
   background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
-    url("../assets/all-images/slider-img/slider-3.jpg");
+    url("https://asacar.uz/uploads/car_color/KK/KK/K4/1632489639.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
