--- a/src/styles/hero-slider.css
+++ b/src/styles/hero-slider.css
@@ -1,34 +1,43 @@
 .slider__item {
   max-width: 100%;
+  width: 100%;
   height: 650px;
+  min-height: 650px;
+  position: relative;
+  overflow: hidden;
 }
 
 .slider__item-01 {
   background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
     url("https://asacar.uz/uploads/car_color/KK/KK/KE/1632743563.png");
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: scroll;
 }
 
 .slider__item-02 {
   background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
     url("https://chevrolet.uz/assets/images/lacetti/colors/1.png");
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: scroll;
 }
 
 .slider__item-03 {
   background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
     url("https://asacar.uz/uploads/car_color/KK/KK/K4/1632489639.png");
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: scroll;
 }
 
 .hero__slider {
   overflow: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
 .slider__content {
@@ -61,7 +70,16 @@
 @media only screen and (max-width: 992px) {
   .slider__item {
     height: 530px;
+    min-height: 530px;
     max-width: 100vw;
+    width: 100%;
+  }
+
+  .slider__item-01,
+  .slider__item-02,
+  .slider__item-03 {
+    background-size: cover;
+    background-position: center center;
   }
 
   .slider__content {
@@ -76,6 +94,16 @@
 @media only screen and (max-width: 768px) {
   .slider__item {
     height: 450px;
+    min-height: 450px;
+    width: 100%;
+    max-width: 100vw;
+  }
+
+  .slider__item-01,
+  .slider__item-02,
+  .slider__item-03 {
+    background-size: cover;
+    background-position: center center;
   }
 
   .slider__content h1 {
